# ultraglitch-bitfucker

./: .gitignore  BUILD.md  CHANGES.md  CMakeLists.txt  COPYRIGHT  DOCUMENTATION.md  FIXLOG.md  README.md  VERSION  buildlog
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Common/: DSPUtils.h  ParameterIDs.h  PluginConfig.h
Source/DSP/: EffectBase.cpp  EffectBase.h  EffectChain.cpp  EffectChain.h
Source/DSP/Effects/: BitCrusher.cpp  BitCrusher.h  BufferStutter.cpp  BufferStutter.h  ChaosController.cpp  ChaosController.h  PitchDrift.cpp  PitchDrift.h  ReverseSlice.cpp  ReverseSlice.h  SliceRearrange.cpp  SliceRearrange.h  WeirdFlanger.cpp  WeirdFlanger.h
Source/GUI/: MainPanel.cpp  MainPanel.h
Source/GUI/Components/: ChaosButton.cpp  ChaosButton.h  EffectModule.cpp  EffectModule.h  GlitchKnob.cpp  GlitchKnob.h  PowerButton.cpp  PowerButton.h
Source/GUI/LookAndFeel/: GlitchLookAndFeel.cpp  GlitchLookAndFeel.h
Source/Parameters/: PluginParameters.cpp  PluginParameters.h
cmake/: JUCE.cmake  PluginConfig.cmake.cyqle1-legacy
scripts/: analyze_existing_files_and_confirm_build_setup.cpp  build_windows.ps1  fetch_juce.sh  package_release.ps1  package_release.sh  verify_build_environment.cpp  verify_headers.py
scripts/legacy/: README.md  build.sh.cyqle1  build_and_test.sh  configure.sh
